# py4csr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FOLDER_CLEANUP_COMPLETE.md  LICENSE  MANIFEST.in  PACKAGE_READY_FOR_GITHUB.md  PROJECT_CLEANUP_SUMMARY.md  PUBLICATION_READY_SUMMARY.md  README.md  SAMPLE_OUTPUTS_SHOWCASE.md  generate_clinical_example_01_demographics.py  generate_rrg_example_01_demographics.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
docs/: concepts.rst  conf.py  index.md  index.rst  installation.md  quickstart.rst
docs/advanced/: custom_statistics.rst  performance.rst  plotting.rst  regulatory.rst
docs/api/: analysis.rst  clinical.rst  config.rst  data.rst  exceptions.rst  functional.rst  plotting.rst  reporting.rst
docs/development/: contributing.rst  releases.rst  testing.rst
docs/examples/: adverse_events.rst  demographics.rst  efficacy.rst
docs/user_guide/: clinical_data.rst  configuration.rst  functional_system.rst  output_generation.rst  statistical_analysis.rst
examples/: basic_example.py  basic_usage.py  comprehensive_csr.py  modular_architecture_demo.py  rtf_formatting_example.py  showcase_all_outputs.py  test_import.py
py4csr/: __init__.py  exceptions.py  py.typed
py4csr/analysis/: __init__.py  advanced_anova.py  advanced_safety.py  binomial.py  categorical.py  demographics.py  efficacy.py  enhanced_efficacy.py  odds_ratio.py  population.py  safety.py  statistical_extensions.py  survival.py  utils.py
py4csr/clinical/: __init__.py  clinical_config.py  clinical_report.py  enhanced_rtf_formatter.py  listing_session.py  pdf_formatter.py  session.py  statistical_engine.py
py4csr/config/: __init__.py  clinical_standard.py  report_config.py
py4csr/core/: __init__.py  data_processor.py  pipeline.py
py4csr/data/: __init__.py  adam_utils.py  io.py  preprocessing.py  validation.py
py4csr/functional/: __init__.py  advanced_features.py  advanced_utilities.py  config.py  output_generators.py  plotting_engine.py  session.py  statistical_templates.py  table_builder.py  workflow_enhancement.py
py4csr/plotting/: README.md  __init__.py  comprehensive_clinical_plots.py  plot_builder.py  plot_result.py  plot_specification.py  sas_compatible_rtf_generator.py
py4csr/plotting/generators/: __init__.py  base_generator.py  boxplot_generator.py  factory.py  forest_generator.py  kaplan_meier_generator.py  rainfall_generator.py  scatter_generator.py  waterfall_generator.py
py4csr/reporting/: __init__.py  clinical_reports.py  clinical_study_reports.py  formatters.py  report_builder.py  rtf_document.py  rtf_table.py  table_result.py  table_specification.py  templates.py
py4csr/reporting/generators/: __init__.py  ae_detail_generator.py  ae_summary_generator.py  base_generator.py  demographics_generator.py  disposition_generator.py  efficacy_generator.py  factory.py  laboratory_generator.py  survival_generator.py
py4csr/tables/: __init__.py  rtf_formatter.py  table_builder.py
tests/: __init__.py  conftest.py  test_package_installation.py  test_real_data.py
tests/integration/: test_full_workflow.py
tests/unit/: test_analysis_demographics.py  test_analysis_efficacy.py  test_analysis_population.py  test_analysis_safety.py  test_analysis_utils.py  test_clinical_session.py  test_clinical_statistical_engine.py  test_config.py  test_data_adam_utils.py  test_data_io.py  test_data_preprocessing.py  test_exceptions.py  test_functional_advanced_features.py  test_functional_advanced_utilities.py  test_functional_interface.py  test_functional_output_generators.py  test_functional_session.py  test_functional_statistical_templates.py  test_functional_table_builder.py  test_listing_session.py  test_pdf_formatter.py  test_plotting_plot_result.py  test_reporting_generators.py  test_reporting_report_builder.py  test_reporting_rtf_table.py  test_reporting_table_result.py  test_reporting_table_specification.py  test_rtf_formatter.py  test_statistical_engine.py  test_validation.py
